Fix header links gap

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body
   width: 400px;
   align-items: center;
   justify-content: center;
+  gap: 50px;
 }
 
 .git 
